--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 // Fonts
 $font-stack: Helvetica, sans-serif;
-$primary-color: #333;list-style-type
+$primary-color: #333;
 $background-color: rgb(193, 247, 229);
  
 body {
